--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,13 @@ edition = "2021"
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 # Axum
-axum = "0.6"
+axum = {version = "0.6", features = ["macros"]}
+tower-http = {version = "0.4", features = ["fs"] }
+tower-cookies = "0.9"
 
 # Serde
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tower-http = {version = "0.4", features = ["fs"] }
 
 [dev-dependencies]
 anyhow = "1"
