--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ serde_json = "1"
 # Others
 lazy-regex = "2"
 async-trait = "0.1"
+strum_macros = "0.24"
+uuid ={ version = "1", features = ["v4", "fast-rng"] }
 
 [dev-dependencies]
 anyhow = "1"
