--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ tower-cookies = "0.9"
 # Serde / Json
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+serde_with = "2"
 
 # Others
 lazy-regex = "2"
