--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,11 @@
 name = "rust-axum-intro"
 version = "0.1.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
+
 # Axum
 axum = {version = "0.6", features = ["macros"]}
 tower-http = {version = "0.4", features = ["fs"] }
@@ -13,7 +15,11 @@ tower-cookies = "0.9"
 # Serde / Json
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-serde_with = "2"
+serde_with = "3"
+
+# Tracing
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 # Others
 lazy-regex = "2"
