--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -6,3 +6,15 @@
 
 # Scope down tracing, to filter out external lib tracing.
 RUST_LOG = "rust_axum_intro=debug"
+
+# -- Service Environment Variables
+# IMPORTANT:
+#   For cargo commands only.
+#   For deployed env, should be managed by container.
+#   (e.g. docker, k8s, etc.).
+
+## -- ConfigMap
+
+# This will be relative to Cargo.toml
+# In deployed images, probably use absolute path.
+SERVICE_WEB_FOLDER="web-folder/"
